[ADD] license check middleware
