# backend-product/app/model/license.go
@@ -1,0 +1,6 @@
+package model
+
+type LicenseCheckRequest struct {
+	Key      string `json:"key"`
+	Username string `json:"username"`
+}
